"added data replay"

--- a/config.ini
+++ b/config.ini
@@ -20,4 +20,10 @@ viewerpassword=
 createemission=
 emissionpassword=
 
-
+[data_replay]
+crc=2019
+diksha_etb_from_date=2021-03-01
+diksha_etb_to_date=2021-03-31
+student_attendance_year=2018
+teacher_attendance_year=2018
+semester_academic_year=2020-21
